--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,13 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  fluttertoast: ^8.2.2
+
+  #  FireBase
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.7.3
+  cloud_firestore: ^4.8.5
+  firebase_storage: ^11.2.6
 
 dev_dependencies:
   flutter_test:
