--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   firebase_auth: ^4.7.3
   cloud_firestore: ^4.8.5
   firebase_storage: ^11.2.6
+  firebase_database: ^10.2.5
+  flutter_bloc: ^8.1.3
+  provider:
 
 dev_dependencies:
   flutter_test:
